change icons, dirs, litlle script

--- a/.local/share/applications/st.desktop
+++ b/.local/share/applications/st.desktop
@@ -2,8 +2,8 @@
 Type=Application
 Name=st
 Comment=simple-terminal emulator for X
-Icon=/home/agung/.local/share/icons/st.png
-Terminal=true
+Icon=/home/agung/.local/share/icons/wterminal.png
+Terminal=false
 Exec=st
 Categories=System;TerminalEmulator
 Keywords=terminal;st;console
