--- a/.local/share/applications/ncmpcpp.desktop
+++ b/.local/share/applications/ncmpcpp.desktop
@@ -6,3 +6,5 @@ Terminal=false
 Exec=st -g 100x25 ncmpcpp
 Name=ncmpcpp
 Icon=/home/agung/.local/share/icons/ncmpcpp.png
+Categories=Music Player
+Keywords=music player;mp3 player;lagu;music;console;terminal
