add eww, backup font, update script

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,7 +6,7 @@ transition-pow-w = 0
 transition-pow-h = 0
 size-transition = false
 
-corner-radius = 14.0;
+corner-radius = 18.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'URxvt'",
@@ -31,7 +31,7 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
-  "class_g = 'Polybar'",
+  "class_g = 'TelegramDesktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -66,7 +66,7 @@ opacity-rule = [
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
+  "100:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
