--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -68,8 +68,8 @@ opacity-rule = [
   "100:class_g    = 'Meld'",
   "100:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
+  "100:class_g    = 'Brave-browser'",
+  "100:class_g    = 'Nemo'"
 ];
 
 # Background-Blurring
@@ -78,7 +78,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 3;
+  strength = 4;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -88,6 +88,7 @@ blur: {
 }
 blur-background-exclude = [
   # "class_g = 'St'",
+  "class_g = 'Brave-browser'",
   "class_g = 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
