update config, add script

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -2,6 +2,7 @@
 --no-osd-bar
 --osd-on-seek=<msg,msg-bar>
 --screenshot-format=png
+--osd-font='SF Pro Display'
 hwdec=vaapi
 mute
 # volume=0
@@ -10,3 +11,10 @@ save-position-on-quit
 loop-playlist=inf
 loop-file=inf
 sub-auto=all
+
+sub-font='SF Pro Display'
+sub-font-size=40
+sub-color='#EBC609'
+sub-bold=no
+sub-italic=no
+sub-back-color='#C0000000'
