--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,13 @@ set -g mouse on
 set-option -g history-limit 5000
 set -g renumber-windows on
 set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+
+set -g status-bg black
+set -g status-fg white
+# set-option -g status-bg colour240
+# set-option -g status-fg default
+# set -g status-bg default
 
 # Status style
 set -g automatic-rename on
@@ -15,12 +22,7 @@ set -g automatic-rename on
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 #Remaping prefix(leader)
-# unbind C-Space
-# set -g prefix C-Space
-# bind C-Space send-prefix
-
-#Remaping prefix(leader) V2
-set-option -g prefix C-a
+set-option -g prefix C-z
 
 #Split window
 bind | split-window -hc "#{pane_current_path}"
@@ -49,7 +51,9 @@ bind -r C-l resize-pane -R 6
 bind j choose-window 'join-pane -h -s "%%"'
 bind J choose-window 'join-pane -s "%%"'
 
-# switching windows with c-a-{i,o}
+# switching windows with c-a-{h,l},{i,o}
+bind -n c-M-h previous-window
+bind -n c-M-l next-window
 bind -n c-M-i previous-window
 bind -n c-M-o next-window
 
@@ -75,7 +79,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
 # List of Plugins (colorscheme-onedark)--
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # List of Plugins (colorscheme-onedark)--
 # set -g @plugin 'wfxr/tmux-power'
