--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -36,7 +36,9 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-
+    kb_options = caps:escape
+    repeat_rate	 = 50    # default 25
+    repeat_delay = 240   # default 600
     follow_mouse = 1
 
     touchpad {
@@ -59,34 +61,30 @@ general {
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     sensitivity=1.0 # for mouse cursor
-
     layout = master # master, dwindle
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
-
 }
+
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 10
+    rounding = 15
     blur = no
     blur_size = 3
     blur_passes = 1
     blur_new_optimizations = on
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
 
+# default
 # animations {
 #     enabled = yes
-#
 #     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-#
 #     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-#
+#     # bezier = myBezier, 0.88, 0.2, 0.2, 0.8
 #     animation = windows, 1, 7, myBezier
 #     animation = windowsOut, 1, 7, default, popin 80%
 #     animation = border, 1, 10, default
@@ -94,13 +92,24 @@ decoration {
 #     animation = workspaces, 1, 6, default
 # }
 
-
+# c@m
 animations {
-    enabled=1
+    enabled = yes
     animation=windows,1,4,default
     animation=fade,1,8,default
     animation=workspaces,1,6,default
 }
+
+# dreamy
+# animations {
+#     enabled=1
+#     # bezier=overshot,0.05,0.9,0.1,1.1
+#     bezier=overshot,0.13,0.99,0.29,1.1
+#     animation=windows,1,4,overshot,slide
+#     animation=border,1,10,default
+#     animation=fade,1,10,default
+#     animation=workspaces,1,6,overshot,slidevert
+# }
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -113,6 +122,7 @@ master {
     new_is_master = false
     new_on_top=false
     no_gaps_when_only = false
+    orientation = left # default left
 }
 
 misc {
@@ -121,14 +131,20 @@ misc {
   mouse_move_enables_dpms=true
 }
 
+binds {
+ workspace_back_and_forth = yes
+ bind = $SUPER,   Tab , exec, workspace back_and_forth
+}
+
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    # workspace_swipe = off
-    workspace_swipe = on
-  # workspace_swipe=true
-  # workspace_swipe_min_speed_to_force=4
-  # workspace_swipe_create_new=false
-  # workspace_swipe_forever=true
+    workspace_swipe = true # enable workspace swipe gesture
+    workspace_swipe_fingers = 3 # how many fingers for the gesture
+    workspace_swipe_distance = 200 # default 300
+    workspace_swipe_cancel_ratio = 0.2 # default 0.5
+    # workspace_swipe_min_speed_to_force=30 # default 30
+    # workspace_swipe_create_new=false
+    # workspace_swipe_forever=true
 }
 
 # Example per-device config
@@ -138,7 +154,6 @@ device:epic mouse V1 {
 }
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
 windowrule = float, ^(Rofi)$
 windowrule = float, ^(vCoolor)$
 windowrule = float, ^(Eog)$
@@ -152,9 +167,7 @@ windowrule = float, ^(nemo)$
 windowrule = float, ^(File-roller)$
 windowrule = float, ^(Org.gnome.Nautilus)$
 windowrule = float, ^(org.gnome.Nautilus)$
-windowrule = float, ^(dolphin)$
-windowrule = float, ^(Gnome-calculator)$
-windowrule = float, ^(Gnome-calendar)$
+windowrule = float, ^(Dolphin)$
 windowrule = float, ^(galculator)$
 windowrule = float, ^(audacious)$
 windowrule = float, ^(Dragon)$
@@ -170,33 +183,30 @@ windowrule = opacity 0.90 override 0.90 override,^(Rofi)$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-# bind = $mainMod, Q, exec, kitty
 bind = $mainMod, RETURN, exec, kitty
-# bind = $mainMod, RETURN, exec, st
+bind = $SUPERSHIFT, RETURN, exec, kitty -e runtmux
 bind = $mainMod, Q, killactive,
 bind = $SUPERSHIFT, Q, exit,
-# bind = $mainMod, E, exec, dolphin
-bind = $mainMod, E, exec, nemo
+# bind = $mainMod, E, exec, nemo
+bind = $SUPER, E, exec, dolphin ~/
+bind = $SUPER, W, exec, firefox
+bind = $SUPERSHIFT, W, exec, firefox --private-window
 bind = $SUPERSHIFT, SPACE, togglefloating,
 # bind = $mainMod, R, exec, wofi --show drun
 bind = SUPER, R, exec, rofi -show drun
 bind = SUPER, D, exec, rofi -show run
 bind = SUPER, GRAVE, exec, rofi -show emoji
 bind = SUPER, APOSTROPHE, exec, rofi -show calc
-bind = SUPER, ESCAPE, exec, $HOME/.config/rofi/scripts/powermenu # rofi-decay in dotfiles
-# history: $HOME/.local/share/rofi/rofi_calc_history
+bind = SUPER, ESCAPE, exec, $HOME/.config/rofi/scripts/powermenu # rofi-decay in dotfiles | history: $HOME/.local/share/rofi/rofi_calc_history
 bind = SUPERSHIFT, APOSTROPHE, exec, galculator
 # bind = SUPER, APOSTROPHE, exec, rofi -show calc -modi calc -no-show-match -no-sort
 bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
-#
+bind = $mainMod, T, togglesplit, # dwindle
 
 bind = ,Print,exec,grim
 bind = $mainMod, C, exec, kitty -e calcurse
 bind = $SUPERSHIFT, M, exec, kitty -e ncmpcpp
 bind = $SUPER, Y, exec, hyprpicker -n # color picker to clipboard
-# bind = $mainMod, A, exec, $HOME/.config/eww/dashboard/launch_dashboard,
-# bind = $mainMod, S, exec, $HOME/.config/eww/slider/launch_slider,
 
 # Mpd control
 bind = $SUPER, BACKSLASH, exec, mpc -p 6601 toggle
@@ -217,8 +227,13 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
 # to switch between windows in a floating workspace
-bind = SUPER,Tab,cyclenext,          # change focus to another window
-bind = SUPER,Tab,bringactivetotop,   # bring it to the top
+# bind = SUPER,Tab,cyclenext,          # change focus to another window
+# bind = SUPER,Tab,bringactivetotop,   # bring it to the top
+
+# Dispatchers
+bind = $SUPER, SPACE, layoutmsg, swapwithmaster
+bind = $SUPER, N, layoutmsg, addmaster # like my dwm
+bind = $SUPERSHIFT, N, layoutmsg, removemaster # like my dwm
 
 # binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde=, XF86AudioRaiseVolume, exec, changevolume up
@@ -226,7 +241,6 @@ binde=, XF86AudioLowerVolume, exec, changevolume down
 binde=, XF86AudioMute, exec, changevolume mute
 binde=, XF86MonBrightnessUp, exec, changebrightness up
 binde=, XF86MonBrightnessDown, exec,  changebrightness down
-
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -268,7 +282,7 @@ binde=SUPERSHIFT,right,resizeactive,40 0
 binde=SUPERSHIFT,up,resizeactive,0 -40
 binde=SUPERSHIFT,down,resizeactive,0 40
 
-
+# Resize with mod+shift+vimkey
 bind=SUPERSHIFT,h,movewindow,l
 bind=SUPERSHIFT,l,movewindow,r
 bind=SUPERSHIFT,k,movewindow,u
