--- a/hyprland/.config/kitty/kitty.conf
+++ b/hyprland/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 cursor_blink_interval 0
-background_opacity 0.89
+background_opacity 0.88
 # dynamic_background_opacity yes
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape block
@@ -9,22 +9,42 @@ cursor_shape block
 background #0D1017
 foreground #c0caf5
 font_size 16.0
-color0  #545c7e
-color8  #545c7e
-color1  #b2555b
-color9  #b2555b
-color2  #A6E3A1
-color10 #A6E3A1
-color3  #ff9e64
-color11 #e0af68
-color4  #6a92d7
-color12 #6a92d7
-color5  #bb9af7
-color13 #bb9af7
-color6  #7ccdfd
-color14 #7ccdfd
-color7  #c0caf5
-color15 #c0caf5
+
+# agung
+color0  #1c252c
+color8  #384148
+color1  #e05f65
+color9  #fc7b81
+color2  #78dba9
+color10 #94f7c5
+color3  #f1cf8a
+color11 #ffeba6
+color4  #70a5eb
+color12 #8cc1ff
+color5  #c68aee
+color13 #e2a6ff
+color6  #74bee9
+color14 #90daff
+color7  #dee1e6
+color15 #fafdff
+
+# chris@machine
+# color0  #545c7e
+# color8  #545c7e
+# color1  #b2555b
+# color9  #b2555b
+# color2  #A6E3A1
+# color10 #A6E3A1
+# color3  #ff9e64
+# color11 #e0af68
+# color4  #6a92d7
+# color12 #6a92d7
+# color5  #bb9af7
+# color13 #bb9af7
+# color6  #7ccdfd
+# color14 #7ccdfd
+# color7  #c0caf5
+# color15 #c0caf5
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
 window_border_width 1
@@ -138,42 +158,66 @@ map ctrl+shift+k close_tab
 
 ; # The 16 terminal colors
 
+# agung^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ; # black
-; color0 #45475A
-; color8 #585B70
-
+; color0  #1c252c
+; color8  #384148
 ; # red
-; color1 #F38BA8
-; color9 #F38BA8
-
+; color1  #e05f65
+; color9  #fc7b81
 ; # green
-; color2  #A6E3A1
-; color10 #A6E3A1
-
+; color2  #78dba9
+; color10 #94f7c5
 ; # yellow
-; color3  #F9E2AF
-; color11 #F9E2AF
-
+; color3  #f1cf8a
+; color11 #ffeba6
 ; # blue
-; color4  #89B4FA
-; color12 #89B4FA
-
+; color4  #70a5eb
+; color12 #8cc1ff
 ; # magenta
-; color5  #F5C2E7
-; color13 #F5C2E7
-
+; color5  #c68aee
+; color13 #e2a6ff
 ; # cyan
-; color6  #94E2D5
-; color14 #94E2D5
-
+; color6  #74bee9
+; color14 #90daff
 ; # white
-; color7  #BAC2DE
-; color15 #A6ADC8
+; color7  #dee1e6
+; color15 #fafdff
+# agung_______________________________________
 
+
+# chris@machine^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+# ; # black
+# ; color0 #45475A
+# ; color8 #585B70
+# ; # red
+# ; color1 #F38BA8
+# ; color9 #F38BA8
+# ; # green
+# ; color2  #A6E3A1
+# ; color10 #A6E3A1
+# ; # yellow
+# ; color3  #F9E2AF
+# ; color11 #F9E2AF
+# ; # blue
+# ; color4  #89B4FA
+# ; color12 #89B4FA
+# ; # magenta
+# ; color5  #F5C2E7
+# ; color13 #F5C2E7
+# ; # cyan
+# ; color6  #94E2D5
+# ; color14 #94E2D5
+# ; # white
+# ; color7  #BAC2DE
+# ; color15 #A6ADC8
+# chris@machine_______________________________
+
+foreground #c0caf5
 ; # text
-; foreground           #CDD6F4
+; foreground           #c0caf5
 ; # base
-; background           #1E1E2E
+; background           #0D1017
 ; # subtext0
 ; title_fg             #A6ADC8
 
