HYPRLAND, epic animation

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -92,13 +92,39 @@ decoration {
 #     animation = workspaces, 1, 6, default
 # }
 
-# c@m
+# agung
 animations {
+
     enabled = yes
-    animation=windows,1,4,default
-    animation=fade,1,8,default
-    animation=workspaces,1,6,default
+
+    # Format
+    # animation=NAME,ONOFF,SPEED,CURVE,STYLE
+    # animation=windows,1,10,myEpicCurve,slide
+
+    # myEpicCurve
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = easeOutShine, 0.61, 1, 0.88, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = overshot, 0.13,0.99,0.29,1.1
+    bezier = easeOutQuart, 0.25, 1, 0.5, 1
+
+    animation = windows,1,4,default
+    animation = windows,1,4, easeOutQuart, slide
+    animation = windowsOut,1,4, easeOutQuart, slide
+    # animation = fade,1,4,default
+    animation = fade, 1, 4, easeOutQuart
+    animation = border, 1, 4, default
+    animation = workspaces,1,6, easeOutQuart, slide
+    # animation = workspaces,1,6,default
 }
+
+# c@m
+# animations {
+#     enabled = yes
+#     animation=windows,1,4,default
+#     animation=fade,1,8,default
+#     animation=workspaces,1,6,default
+# }
 
 # dreamy
 # animations {
@@ -154,6 +180,8 @@ device:epic mouse V1 {
 }
 
 # Example windowrule v1
+windowrule = animation default,^(Rofi)$ # sets the animation style for Rofi
+# windowrule = animation default,^(galculator)$
 windowrule = float, ^(Rofi)$
 windowrule = float, ^(vCoolor)$
 windowrule = float, ^(Eog)$
@@ -167,9 +195,9 @@ windowrule = float, ^(nemo)$
 windowrule = float, ^(File-roller)$
 windowrule = float, ^(Org.gnome.Nautilus)$
 windowrule = float, ^(org.gnome.Nautilus)$
-windowrule = float, ^(Dolphin)$
+windowrule = float, ^(dolphin)$
+windowrule = float, ^(org.kde.dolphin.desktop)$
 windowrule = float, ^(galculator)$
-windowrule = float, ^(audacious)$
 windowrule = float, ^(Dragon)$
 
 # Example windowrule v2
@@ -210,6 +238,7 @@ bind = $SUPER, Y, exec, hyprpicker -n # color picker to clipboard
 
 # Mpd control
 bind = $SUPER, BACKSLASH, exec, mpc -p 6601 toggle
+bind = $SUPERSHIFT, BACKSLASH, exec, mpc -p 6601 stop
 bind = $SUPER, BRACKETRIGHT, exec, mpc -p 6601 next
 bind = $SUPER, BRACKETLEFT, exec, mpc -p 6601 prev
 bind = $SUPERSHIFT, BRACKETRIGHT, exec, mpc -p 6601 seek +10
@@ -236,11 +265,11 @@ bind = $SUPER, N, layoutmsg, addmaster # like my dwm
 bind = $SUPERSHIFT, N, layoutmsg, removemaster # like my dwm
 
 # binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-binde=, XF86AudioRaiseVolume, exec, changevolume up
-binde=, XF86AudioLowerVolume, exec, changevolume down
-binde=, XF86AudioMute, exec, changevolume mute
-binde=, XF86MonBrightnessUp, exec, changebrightness up
-binde=, XF86MonBrightnessDown, exec,  changebrightness down
+binde =, XF86AudioRaiseVolume, exec, changevolume up
+binde =, XF86AudioLowerVolume, exec, changevolume down
+binde =, XF86AudioMute, exec, changevolume mute
+binde =, XF86MonBrightnessUp, exec, changebrightness up
+binde =, XF86MonBrightnessDown, exec,  changebrightness down
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -275,15 +304,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bind = $mainMod, mouse:274, togglefloating # mouse:174 MMB
 
 # Resize window with mod+shift+arrow
-binde=SUPERSHIFT,left,resizeactive,-40 0
-binde=SUPERSHIFT,right,resizeactive,40 0
-binde=SUPERSHIFT,up,resizeactive,0 -40
-binde=SUPERSHIFT,down,resizeactive,0 40
+binde = SUPERSHIFT,left,resizeactive,-40 0
+binde = SUPERSHIFT,right,resizeactive,40 0
+binde = SUPERSHIFT,up,resizeactive,0 -40
+binde = SUPERSHIFT,down,resizeactive,0 40
 
 # Resize with mod+shift+vimkey
-bind=SUPERSHIFT,h,movewindow,l
-bind=SUPERSHIFT,l,movewindow,r
-bind=SUPERSHIFT,k,movewindow,u
-bind=SUPERSHIFT,j,movewindow,d
+bind = SUPERSHIFT,h,movewindow,l
+bind = SUPERSHIFT,l,movewindow,r
+bind = SUPERSHIFT,k,movewindow,u
+bind = SUPERSHIFT,j,movewindow,d
