--- a/hyprland/.config/waybar/config
+++ b/hyprland/.config/waybar/config
@@ -76,7 +76,7 @@
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
         /* "format-icons": [" ", " ", " ", " ", " "] */
-        "format-alt": "{time} {icon}",
+        "format-alt": "{icon}{time}",
         "format-icons": ["", "", "", "", ""]
 
     },
