--- a/hyprland/.config/kitty/kitty.conf
+++ b/hyprland/.config/kitty/kitty.conf
@@ -57,8 +57,7 @@ window_padding_width 1
 
 linux_display_server wayland
 update_check_interval 0
-macos_titlebar_color background
-macos_opt_as_alt yes
+# macos_titlebar_color background
 wayland_titlebar_color background
 
 # Shift + Enter
@@ -68,35 +67,6 @@ map shift+enter send_text all \x1b[13;2u
 map ctrl+i send_text all \x1b[105;5u
 
 font_family       JetBrainsMono Nerd Font Mono
-# font_family       Victor Mono
-# font_family       Hack Nerd Font
-# font_family       FiraCode Nerd Font Mono
-# font_family       Comic Code Ligatures
-# font_family       Mono Lisa
-# font_family       Cascadia Code
-; font_family       TempleOS
-
-# font_features     CascadiaCode-Regular            calt zero
-# font_features     CascadiaCode-Bold               calt zero
-# font_features     CascadiaCode-ExtraLight         calt zero
-# font_features     CascadiaCode-Light              calt zero
-# font_features     CascadiaCode-SemiBold           calt zero
-# font_features     CascadiaCode-SemiLight          calt zero
-
-# font_features     CascadiaCode-SemiBoldItalic     calt zero +ss01
-# font_features     CascadiaCode-LightItalic        calt zero +ss01
-# font_features     CascadiaCode-ExtraLightItalic   calt zero +ss01
-# font_features     CascadiaCode-Italic             calt zero +ss01
-# font_features     CascadiaCode-BoldItalic         calt zero +ss01
-# font_features     CascadiaCode-SemiLightItalic    calt zero +ss01
-
-# font_features     CascadiaCode-SemiBoldItalic     calt zero
-# font_features     CascadiaCode-LightItalic        calt zero
-# font_features     CascadiaCode-ExtraLightItalic   calt zero
-# font_features     CascadiaCode-Italic             calt zero
-# font_features     CascadiaCode-BoldItalic         calt zero
-# font_features     CascadiaCode-SemiLightItalic    calt zero
-
 ## Tab Bar
 tab_bar_edge top
 tab_bar_style fade
@@ -118,141 +88,3 @@ map ctrl+shift+l next_tab
 map ctrl+shift+h previous_tab
 map ctrl+shift+j new_tab
 map ctrl+shift+k close_tab
-
-; # The basic colors
-; foreground              #CDD6F4
-; background              #1E1E2E
-; selection_foreground    #1E1E2E
-; selection_background    #F5E0DC
-
-; # Cursor colors
-; cursor                  #F5E0DC
-; cursor_text_color       #1E1E2E
-
-; # URL underline color when hovering with mouse
-; url_color               #F5E0DC
-
-; # Kitty window border colors
-; active_border_color     #B4BEFE
-; inactive_border_color   #6C7086
-; bell_border_color       #F9E2AF
-
-; # OS Window titlebar colors
-; wayland_titlebar_color system
-; macos_titlebar_color system
-
-; # Tab bar colors
-; active_tab_foreground   #11111B
-; active_tab_background   #CBA6F7
-; inactive_tab_foreground #CDD6F4
-; inactive_tab_background #181825
-; tab_bar_background      #11111B
-
-; # Colors for marks (marked text in the terminal)
-; mark1_foreground #1E1E2E
-; mark1_background #B4BEFE
-; mark2_foreground #1E1E2E
-; mark2_background #CBA6F7
-; mark3_foreground #1E1E2E
-; mark3_background #74C7EC
-
-; # The 16 terminal colors
-
-# agung^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-; # black
-; color0  #1c252c
-; color8  #384148
-; # red
-; color1  #e05f65
-; color9  #fc7b81
-; # green
-; color2  #78dba9
-; color10 #94f7c5
-; # yellow
-; color3  #f1cf8a
-; color11 #ffeba6
-; # blue
-; color4  #70a5eb
-; color12 #8cc1ff
-; # magenta
-; color5  #c68aee
-; color13 #e2a6ff
-; # cyan
-; color6  #74bee9
-; color14 #90daff
-; # white
-; color7  #dee1e6
-; color15 #fafdff
-# agung_______________________________________
-
-
-# chris@machine^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-# ; # black
-# ; color0 #45475A
-# ; color8 #585B70
-# ; # red
-# ; color1 #F38BA8
-# ; color9 #F38BA8
-# ; # green
-# ; color2  #A6E3A1
-# ; color10 #A6E3A1
-# ; # yellow
-# ; color3  #F9E2AF
-# ; color11 #F9E2AF
-# ; # blue
-# ; color4  #89B4FA
-# ; color12 #89B4FA
-# ; # magenta
-# ; color5  #F5C2E7
-# ; color13 #F5C2E7
-# ; # cyan
-# ; color6  #94E2D5
-# ; color14 #94E2D5
-# ; # white
-# ; color7  #BAC2DE
-# ; color15 #A6ADC8
-# chris@machine_______________________________
-
-foreground #c0caf5
-; # text
-; foreground           #c0caf5
-; # base
-; background           #0D1017
-; # subtext0
-; title_fg             #A6ADC8
-
-; # mantle
-; title_bg             #181825
-; margin_bg            #181825
-
-; # subtext1
-; margin_fg            #A6ADC8
-; # mantle
-; filler_bg            #181825
-
-; # 30% red, 70% base
-; removed_bg           #5E3F53
-; # 50% red, 50% base
-; highlight_removed_bg #89556B
-; # 40% red, 60% base
-; removed_margin_bg    #734A5F
-
-; # 30% green, 70% base
-; added_bg             #475951
-; # 50% green, 50% base
-; highlight_added_bg   #628168
-; # 40% green, 60% base
-; added_margin_bg      #546D5C
-
-; # mantle
-; hunk_margin_bg       #181825
-; hunk_bg              #181825
-
-; # 40% yellow, 60% base
-; search_bg            #A1937B
-; # text
-; search_fg            #CDD6F4
-; # 30% sky, 70% base
-; select_bg            #45475A
-; # text
-; select_fg            #CDD6F4
