--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -4,6 +4,10 @@ PLEASE USE THE CONFIG PROVIDED IN THE GIT REPO /examples/hypr.conf AND EDIT IT,
 OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 ########################################################################################
 
+########################################
+########### General Settings ###########
+########################################
+
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
 
@@ -16,11 +20,11 @@ monitor=,preferred,auto,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
-exec-once = hyprpaper
+exec-once = waybar #bar
+exec-once = hyprpaper #wallpaper
 exec-once = mpd
-exec-once = lowbatnotif
-exec-once = dunst
+exec-once = lowbatnotif #custom script for lowbat nitification
+exec-once = dunst #notification
 # exec-once = hyprland-desktop-portal
 # exec-once = launchwaybar & hyprpaper & mpd & lowbatnotify
 
@@ -37,13 +41,13 @@ exec-once = gsettings set org.gnome.desktop.interface font-name 'SF Pro Display 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    # kb_variant =
-    # kb_model =
-    # kb_options =
-    # kb_rules =
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
     kb_options = caps:escape
     repeat_rate	 = 50  # default 25
-    repeat_delay = 240 # default 600
+    repeat_delay = 210 # default 600
     follow_mouse = 1
 
     touchpad {
@@ -68,7 +72,6 @@ general {
     sensitivity=1.0 # for mouse cursor
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
-
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -96,7 +99,6 @@ decoration {
 #     animation = workspaces, 1, 6, default
 # }
 
-# agung
 animations {
 
     enabled = yes
@@ -121,25 +123,6 @@ animations {
     animation = workspaces,1,6, easeOutQuart, slide
     # animation = workspaces,1,6,default
 }
-
-# c@m
-# animations {
-#     enabled = yes
-#     animation=windows,1,4,default
-#     animation=fade,1,8,default
-#     animation=workspaces,1,6,default
-# }
-
-# dreamy
-# animations {
-#     enabled=1
-#     # bezier=overshot,0.05,0.9,0.1,1.1
-#     bezier=overshot,0.13,0.99,0.29,1.1
-#     animation=windows,1,4,overshot,slide
-#     animation=border,1,10,default
-#     animation=fade,1,10,default
-#     animation=workspaces,1,6,overshot,slidevert
-# }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -172,20 +155,56 @@ gestures {
     # workspace_swipe_min_speed_to_force=4 # default 30
 }
 
+binds {
+    workspace_back_and_forth = true
+    # this is how it works:
+    # 1. Workspace aktif worskpace3
+    # 2. Saya pindah ke workspace1 dengan MOD+1
+    # 3. Kalau saya tekan MOD+1 lagi, akan pindah lagi ke workspace3
+    # 4. MOD+1 kembali lagi ke workspace1, begitu seterusnya berulang2.
+}
+    # bind = SUPER, TAB, exec, back_and_forth
+    # bind = SUPER, TAB, exec, workspace back_and_forth
+    # bind = SUPER, TAB, workspace, back_and_forth
+
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
+
 # ex: compx-2.4g-receiver-mouse (my robot mouse)
-device: compx-2.4g-receiver-mouse V1 {
+# check with 'hyprctl devices | grep mouse'
+    device: compx-2.4g-receiver-mouse {
     sensitivity = 1
 }
 
+########################################
+############# Window Rules #############
+########################################
+
 # Example windowrule v1
+# see class name
+# To get more information about a window’s class, title, XWayland status or its size, you can use 'hyprctl clients'
 windowrule = animation default,^(Rofi)$ # sets the animation style for Rofi
 windowrule = animation default,^(Sxiv)$
 windowrule = animation default,^(mirage)$
+windowrule = animation default,^(kitty-float)$
+windowrule = animation default,^(st-float)$
+windowrule = animation default,^(nemo)$
+windowrule = animation default,^(org.kde.dolphin)$
+windowrule = animation default,^(org.kde.keditfiletype)$
+windowrule = animation default,^(galculator)$
+windowrule = workspace 2,^(firefox)$
+windowrule = workspace 2,^(brave)$
+windowrule = workspace 3,^(Code)$
+windowrule = workspace 4,^(org.telegram.desktop._ae71f45199d6db0e9df074b91b1038d0)$
+windowrule = workspace 5,^(org.shotcut.Shotcut)$
+windowrule = workspace 6,^(Gimp-2.10)$
+windowrule = workspace 7,^(org.inkscape.Inkscape)$
+windowrule = workspace 8,^(com.obsproject.Studio)$
+windowrule = workspace 9,^(discord)$
 windowrule = float, ^(Rofi)$
+windowrule = float, ^(kitty-float)$
+windowrule = float, ^(st-float)$
 windowrule = float, ^(vCoolor)$
-windowrule = float, ^(Eog)$
 windowrule = float, ^(Arandr)$
 windowrule = float, ^(pavucontrol)$
 windowrule = float, ^(xdman-Main)$
@@ -193,11 +212,9 @@ windowrule = float, ^(arandr)$
 windowrule = float, ^(sxiv)$
 windowrule = float, ^(mirage)$
 windowrule = float, ^(nemo)$
+windowrule = float, ^(org.kde.dolphin)$
+windowrule = float, ^(org.kde.keditfiletype)$
 windowrule = float, ^(File-roller)$
-windowrule = float, ^(Org.gnome.Nautilus)$
-windowrule = float, ^(org.gnome.Nautilus)$
-windowrule = float, ^(dolphin)$
-windowrule = float, ^(org.kde.dolphin.desktop)$
 windowrule = float, ^(galculator)$
 windowrule = float, ^(Dragon)$
 
@@ -205,77 +222,81 @@ windowrule = float, ^(Dragon)$
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule=noborder,Rofi
+windowrule = noborder,Rofi
 windowrule = opacity 0.90 override 0.90 override,^(Rofi)$
 
-# Keybindings
+########################################
+############# Keybindings ##############
+########################################
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = SUPER, F1, exec, groff -mom $HOME/.dotfiles/hyprland/help.mom -Tpdf | zathura -
-bind = SUPER, F4, exec, kitty -e pulsemixer
+bind = SUPER, F4, exec, st -c st-float -g 95x25 pulsemixer
+# bind = SUPER, F4, exec, kitty --class kitty-float pulsemixer
+#
 
+
+# Applications
 bind = SUPER, RETURN, exec, kitty
-bind = SUPERSHIFT, RETURN, exec, kitty -e runtmux
+bind = SUPER SHIFT, RETURN, exec, st -c st-float -g 95x25
+bind = SUPER, F, fullscreen,0
 bind = SUPER, Q, killactive,
-bind = SUPERSHIFT, Q, exit,
-# bind = SUPER, E, exec, nemo
-bind = SUPER, E, exec, dolphin ~/
+bind = SUPER SHIFT, Q, exit,
+bind = CONTROL ALT, L, exec, swaylock -f -c 000000
+bind = SUPER SHIFT, E, exec, nemo
+bind = SUPER, E, exec, st -c st-float -g 95x25 -e lf
+# bind = SUPER, E, exec, dolphin ~/
 bind = SUPER, W, exec, firefox
-bind = SUPERSHIFT, W, exec, firefox --private-window
-bind = SUPERSHIFT, SPACE, togglefloating,
-# bind = SUPER, R, exec, wofi --show drun
+bind = SUPER SHIFT, W, exec, firefox --private-window
+bind = SUPER SHIFT, SPACE, togglefloating,
 bind = SUPER, R, exec, rofi -show drun
+# bind = SUPER, R, exec, wofi --show drun
 bind = SUPER, D, exec, rofi -show run
+# bind = SUPER, D, exec, wofi --show run
 bind = SUPER, GRAVE, exec, rofi -show emoji
 bind = SUPER, APOSTROPHE, exec, rofi -show calc
-bind = SUPER, ESCAPE, exec, $HOME/.config/rofi/scripts/powermenu # rofi-decay in dotfiles | history: $HOME/.local/share/rofi/rofi_calc_history
-bind = SUPERSHIFT, APOSTROPHE, exec, galculator
+# bind = SUPER, ESCAPE, exec, $HOME/.config/rofi/scripts/powermenu # rofi-decay in dotfiles | history: $HOME/.local/share/rofi/rofi_calc_history
+bind = SUPER, ESCAPE, exec, wlogout
+bind = SUPER SHIFT, APOSTROPHE, exec, galculator
 # bind = SUPER, APOSTROPHE, exec, rofi -show calc -modi calc -no-show-match -no-sort
 # bind = SUPER, P, pseudo, # dwindle
 # bind = SUPER, T, togglesplit, # dwindle
 
-bind = ,Print,exec,grim
-bind = SUPER, C, exec, kitty -e calcurse
-bind = SUPER, M, exec, kitty -e ncmpcpp
-bind = SUPER, F, exec, kitty -e lf
+# Utilities
+bind = ,Print, exec, grim
+bind = SUPER SHIFT, Y ,exec, grim -g "$(slurp)" - | swappy -f -
+# bind = SUPERSHIFT, V, exec, wf-recorder -g "$(slurp)" # run wf-recorder in terminal
+bind = SUPER, C, exec, st -c st-float -g 95x25 -e calcurse
+bind = SUPER, M, exec, st -c st-float -g 95x25 -e ncmpcpp
+bind = SUPER SHIFT, R, exec, st -c st-float -g 95x25 -e gotop
 bind = SUPER, Y, exec, hyprpicker -n # color picker to clipboard
+bind = SUPER CONTROL, N, exec, st -c st-float -g 95x25 -e nmtui
 
 # Mpd control
 bind = SUPER, BACKSLASH, exec, mpc -p 6601 toggle
-bind = SUPERSHIFT, BACKSLASH, exec, mpc -p 6601 stop
+bind = SUPER SHIFT, BACKSLASH, exec, mpc -p 6601 stop
 bind = SUPER, BRACKETRIGHT, exec, mpc -p 6601 next
 bind = SUPER, BRACKETLEFT, exec, mpc -p 6601 prev
-bind = SUPERSHIFT, BRACKETRIGHT, exec, mpc -p 6601 seek +10
-bind = SUPERSHIFT, BRACKETLEFT, exec, mpc -p 6601 seek -10
-
-# Move focus with SUPER + arrow keys
-bind = SUPER, left, movefocus, l
-bind = SUPER, right, movefocus, r
-bind = SUPER, up, movefocus, u
-bind = SUPER, down, movefocus, d
-# Move focus with SUPER + vim keys
-bind = SUPER, H, movefocus, l
-bind = SUPER, L, movefocus, r
-bind = SUPER, K, movefocus, u
-bind = SUPER, J, movefocus, d
+bind = SUPER SHIFT, BRACKETRIGHT, exec, mpc -p 6601 seek +10
+bind = SUPER SHIFT, BRACKETLEFT, exec, mpc -p 6601 seek -10
 
 # To switch between windows in a floating workspace
 # bind = SUPER,Tab,cyclenext,          # change focus to another window
 # bind = SUPER,Tab,bringactivetotop,   # bring it to the top
 
-# Dispatchers
-bind = SUPER, SPACE, layoutmsg, swapwithmaster
-
 # Cycle to the next orientation for the current workspace
 bind = SUPER, PERIOD, layoutmsg, orientationnext # clockwise
 bind = SUPER, COMMA, layoutmsg, orientationprev # counter clockwise
 
-# add and remove master like dwm
-bind = SUPER, N, layoutmsg, addmaster
-bind = SUPERSHIFT, N, layoutmsg, removemaster # dwm-layout-like bind = SUPER, T, layoutmsg, orientationleft # tile
+# Dispatchers (like dwm)
+bind = SUPER, SPACE, layoutmsg, swapwithmaster
+bind = SUPER, T, layoutmsg, orientationleft # tile
 bind = SUPER, B, layoutmsg, orientationtop  # bottomstack
+bind = SUPER, N, layoutmsg, addmaster
+bind = SUPER SHIFT, N, layoutmsg, removemaster
 
 # binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde =, XF86AudioRaiseVolume, exec, changevolume up
@@ -283,6 +304,10 @@ binde =, XF86AudioLowerVolume, exec, changevolume down
 binde =, XF86AudioMute, exec, changevolume mute
 binde =, XF86MonBrightnessUp, exec, changebrightness up
 binde =, XF86MonBrightnessDown, exec,  changebrightness down
+
+########################################
+####### Navigation, move, resize #######
+########################################
 
 # Switch workspaces with SUPER + [0-9]
 bind = SUPER, 1, workspace, 1
@@ -294,7 +319,7 @@ bind = SUPER, 6, workspace, 6
 bind = SUPER, 7, workspace, 7
 bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
+# bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with SUPER + SHIFT + [0-9]
 bind = SUPER SHIFT, 1, movetoworkspace, 1
@@ -306,7 +331,7 @@ bind = SUPER SHIFT, 6, movetoworkspace, 6
 bind = SUPER SHIFT, 7, movetoworkspace, 7
 bind = SUPER SHIFT, 8, movetoworkspace, 8
 bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
+# bind = SUPER SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with SUPER + scroll
 bind = SUPER, o, workspace, e+1
@@ -314,25 +339,43 @@ bind = SUPER, i, workspace, e-1
 bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
 
+# Move focus with SUPER + arrow keys
+bind = SUPER, left, movefocus, l
+bind = SUPER, right, movefocus, r
+bind = SUPER, up, movefocus, u
+bind = SUPER, down, movefocus, d
+
+# Move focus with SUPER + vim keys
+bind = SUPER, H, movefocus, l
+bind = SUPER, L, movefocus, r
+bind = SUPER, K, movefocus, u
+bind = SUPER, J, movefocus, d
+
 # Move/resize windows with SUPER + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 bind = SUPER, mouse:274, togglefloating # mouse:174 MMB
 
-# Resize window with mod+shift+arrow
-binde = SUPERSHIFT,left,resizeactive,-85 0
-binde = SUPERSHIFT,right,resizeactive,85 0
-binde = SUPERSHIFT,up,resizeactive,0 -50
-binde = SUPERSHIFT,down,resizeactive,0 50
+# Move window with mod+shift+vimkey
+bind = SUPER SHIFT,h,movewindow,l
+bind = SUPER SHIFT,l,movewindow,r
+bind = SUPER SHIFT,k,movewindow,u
+bind = SUPER SHIFT,j,movewindow,d
+
+# Move window with arrow
+bind = SUPER SHIFT,left,movewindow,l
+bind = SUPER SHIFT,right,movewindow,r
+bind = SUPER SHIFT,up,movewindow,u
+bind = SUPER SHIFT,down,movewindow,d
+
+# Resize window with mod+control+arrow
+binde = SUPER CONTROL,left,resizeactive,-85 0
+binde = SUPER CONTROL,right,resizeactive,85 0
+binde = SUPER CONTROL,up,resizeactive,0 -50
+binde = SUPER CONTROL,down,resizeactive,0 50
 
 # Resize window with mod+control+vimkey
-binde = SUPERCONTROL,h,resizeactive,-85 0
-binde = SUPERCONTROL,l,resizeactive,85 0
-binde = SUPERCONTROL,k,resizeactive,0 -50
-binde = SUPERCONTROL,j,resizeactive,0 50
-
-# Resize with mod+shift+vimkey
-bind = SUPERSHIFT,h,movewindow,l
-bind = SUPERSHIFT,l,movewindow,r
-bind = SUPERSHIFT,k,movewindow,u
-bind = SUPERSHIFT,j,movewindow,d
+binde = SUPER CONTROL,h,resizeactive,-85 0
+binde = SUPER CONTROL,l,resizeactive,85 0
+binde = SUPER CONTROL,k,resizeactive,0 -50
+binde = SUPER CONTROL,j,resizeactive,0 50
