--- a/hyprland/.config/waybar/config
+++ b/hyprland/.config/waybar/config
@@ -4,9 +4,11 @@
     "spacing": 4, // Gaps between modules (4px)
     // "modules-left": ["custom/launcher", "wlr/workspaces", "hyprland/window"],
     // "modules-left": ["custom/launcher", "wlr/workspaces"],
-    "modules-left": ["custom/launcher", "wlr/workspaces"],
-    /* "modules-center": ["custom/spotify"], */
-    "modules-right": ["tray","battery", "pulseaudio", "network", "clock"],
+    // "modules-left": ["custom/launcher", "wlr/workspaces"],
+    // "modules-center": ["custom/spotify"],
+    // "modules-center": ["wlr/window"],
+    "modules-left": ["wlr/workspaces"],
+    "modules-right": ["tray","battery", "network", "pulseaudio", "clock"],
     "wlr/workspaces": {
       "format": "{icon}",
       "on-click": "activate",
@@ -26,7 +28,7 @@
     },
     "tray": {
         "icon-size": 21,
-        "spacing": 10
+        "spacing": 11
     },
    //  "clock": {
    //      // "format": "<span color='#ffffff'></span> {:%a %b %d}",
@@ -55,16 +57,19 @@
      "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
 
-        "format-wifi": "直 {signalStrength}%",
+        "format-wifi": "直  {signalStrength}%",
         // "format-ethernet": " {ifname}: {ipaddr}/{cidr}",
         // "format-ethernet": " {ifname}",
         // "format-ethernet": " wired",
         "format-ethernet": "",
+        /* "format-disconnected": "", */
         "format-disconnected": "睊",
-        "on-click": "kitty -e nmtui",
+        /* "on-click": "kitty -e nmtui", */
+        "on-click": "st -c st-float -g 95x25 nmtui",
         // "format-wifi": "{essid} ({signalStrength}%) ",
         // "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
+        // "tooltip-format": "{ifname} via {gwaddr} ",
+        // "tooltip-format": false,
         // "format-linked": "{ifname} (No IP) ",
         // "format-disconnected": "Disconnected ⚠",
         // "format-alt": "{ifname}: {ipaddr}/{cidr}" // (on-click)
@@ -73,14 +78,15 @@
         "states": {
             // "good": 95,
             "warning": 20,
-            "critical": 10
-        },
+            "critical": 15,
+       },
         "format": "{icon}{capacity}%",
         "format-charging": "{capacity}%",
-        "format-plugged": "ﮣ{capacity}%",
+        "format-plugged": "ﮣ{capacity}%",
+        /* "format-full": "{capacity}%", */
+        /* "format-full": "", */
         /* "format-plugged": "{capacity}%", */
         // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
         /* "format-icons": [" ", " ", " ", " ", " "] */
         "format-alt": "{icon}{time}",
         "format-icons": ["", "", "", "", ""]
@@ -90,12 +96,13 @@
         // "scroll-step": 1, // %, can be a float
         // "format": "{volume}% {icon} {format_source}",
         // "format": "{volume}% {icon}",
-        "format": "{icon} {volume}%",
+        "format": "{icon}  {volume}%",
         "format-bluetooth": "{icon} {volume}% {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         //"format-muted": "婢",
         /* "format-muted": "🔇", */
-        "format-muted": " {volume}%",
+        "format-muted": "  {volume}%",
+        /* "format-muted": "{icon} {volume}%", */
         // "format-source": "{volume}% ",
         // "format-source-muted": "",
         "format-icons": {
@@ -105,7 +112,7 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "墳", ""]
+            "default": ["","", "墳", "", ]
         },
         // "on-click": "pavucontrol"
         // "on-click": "kitty -e pulsemixer"
@@ -118,7 +125,7 @@
         // "format": " <span color='#bf616a'> </span>",
         // "format": "",
         // "format": "異",
-        /* "tooltip-format" : "Rofi launcher", */
+        // "tooltip-format" : "Rofi launcher",
         "format": "🚀",
         // "format": " <span color='#bf616a'> 異</span>",
         // "format": " <span color='#bf616a'> </span>",
