HYPRLAND - update GTK theme for libreoffice*-.desktop, icon, cursor & config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -8,6 +8,10 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 ########### General Settings ###########
 ########################################
 
+# Variables
+$mainMod = SUPER
+$sizeFloat = 65% 65%
+
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
 
@@ -25,12 +29,16 @@ exec-once = hyprpaper #wallpaper
 exec-once = mpd
 exec-once = lowbatnotif #custom script for lowbat nitification
 exec-once = dunst #notification
+exec-once = lxqt-policykit-agent #(dolphin)handling the policy that allows unprivileged processes
 # exec-once = hyprland-desktop-portal
 # exec-once = launchwaybar & hyprpaper & mpd & lowbatnotify
 
-# gesttings
-exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Windows-11'
-exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Win11-blue'
+# gsettings
+# [gtk theme set in here] [qt theme set in qt5ct]
+# [also set in lxappearance to take effect in rofi etc]
+
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Dark-decay'
+exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'macOS-BigSur'
 exec-once = gsettings set org.gnome.desktop.interface cursor-size '24' # 22 24 28 32 40 48 56 64 72 80 88 96
 exec-once = gsettings set org.gnome.desktop.interface font-name 'SF Pro Display 14'
@@ -65,7 +73,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     layout = master # master, dwindle
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 23
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -75,7 +83,7 @@ general {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 15
+    rounding = 17
     blur = no
     blur_size = 3 #minimum 1
     blur_passes = 1 # minimum 1, more passes = more resource intensive.
@@ -150,7 +158,7 @@ gestures {
     workspace_swipe_fingers = 3 # how many fingers for the gesture
     workspace_swipe_distance = 200 # default 300
     workspace_swipe_cancel_ratio = 0.2 # default 0.5
-    workspace_swipe_create_new=false
+    workspace_swipe_create_new=true
     workspace_swipe_forever=true
     # workspace_swipe_min_speed_to_force=4 # default 30
 }
@@ -183,40 +191,107 @@ binds {
 # Example windowrule v1
 # see class name
 # To get more information about a window’s class, title, XWayland status or its size, you can use 'hyprctl clients'
-windowrule = animation default,^(Rofi)$ # sets the animation style for Rofi
-windowrule = animation default,^(Sxiv)$
-windowrule = animation default,^(mirage)$
-windowrule = animation default,^(kitty-float)$
-windowrule = animation default,^(st-float)$
-windowrule = animation default,^(nemo)$
-windowrule = animation default,^(org.kde.dolphin)$
-windowrule = animation default,^(org.kde.keditfiletype)$
-windowrule = animation default,^(galculator)$
 windowrule = workspace 2,^(firefox)$
 windowrule = workspace 2,^(brave)$
 windowrule = workspace 3,^(Code)$
 windowrule = workspace 4,^(org.telegram.desktop._ae71f45199d6db0e9df074b91b1038d0)$
+windowrule = workspace 4,^(libreoffice-writer)$
+windowrule = workspace 4,^(libreoffice-calc)$
+windowrule = workspace 4,^(libreoffice-base)$
+windowrule = workspace 4,^(libreoffice-draw)$
+windowrule = workspace 4,^(libreoffice-impress)$
+windowrule = workspace 4,^(libreoffice-math)$
 windowrule = workspace 5,^(org.shotcut.Shotcut)$
 windowrule = workspace 6,^(Gimp-2.10)$
 windowrule = workspace 7,^(org.inkscape.Inkscape)$
 windowrule = workspace 8,^(com.obsproject.Studio)$
 windowrule = workspace 9,^(discord)$
-windowrule = float, ^(Rofi)$
+windowrule = workspace 9,^(zoom)$
+
+# floating kitty
 windowrule = float, ^(kitty-float)$
-windowrule = float, ^(st-float)$
-windowrule = float, ^(vCoolor)$
-windowrule = float, ^(Arandr)$
-windowrule = float, ^(pavucontrol)$
-windowrule = float, ^(xdman-Main)$
-windowrule = float, ^(arandr)$
-windowrule = float, ^(sxiv)$
-windowrule = float, ^(mirage)$
-windowrule = float, ^(nemo)$
+windowrule = size $sizeFloat, ^(kitty-float)$
+windowrule = center, ^(kitty-float)$
+windowrule = animation default,^(kitty-float)$
+# windowrule = noborder, ^(kitty-float)$
+
+# sxiv
+windowrule = float, ^(Sxiv)$
+windowrule = size $sizeFloat, ^(Sxiv)$
+windowrule = center, ^(Sxiv)$
+windowrule = animation default,^(Sxiv)$
+
+# zathura
+windowrule = float, ^(org.pwmt.zathura)$
+windowrule = size $sizeFloat, ^(org.pwmt.zathura)$
+windowrule = center, ^(org.pwmt.zathura)$
+windowrule = animation default,^(org.pwmt.zathura)$
+
+# dolphin
 windowrule = float, ^(org.kde.dolphin)$
+# windowrule = size $sizeFloat, ^(org.kde.dolphin)$
+windowrule = center, ^(org.kde.dolphin)$
+windowrule = animation default,^(org.kde.dolphin)$
+
+# lxqt-policykit-agent
+windowrule = float, ^(lxqt-policykit-agent)$
+# windowrule = size $sizeFloat, ^(lxqt-policykit-agent)$
+windowrule = center, ^(lxqt-policykit-agent)$
+windowrule = animation default,^(lxqt-policykit-agent)$
+
 windowrule = float, ^(org.kde.keditfiletype)$
+# windowrule = size $sizeFloat, ^(org.kde.keditfiletype)$
+windowrule = center, ^(org.kde.keditfiletype)$
+windowrule = animation default,^(org.kde.keditfiletype)$
+
+# nemo
+windowrule = float, ^(nemo)$
+# windowrule = size $sizeFloat, ^(nemo)$
+windowrule = center, ^(nemo)$
+windowrule = animation default,^(nemo)$
+
 windowrule = float, ^(File-roller)$
+# windowrule = size $sizeFloat, ^(File-roller)$
+windowrule = center, ^(File-roller)$
+windowrule = animation default,^(File-roller)$
+
+# mirage
+windowrule = float, ^(mirage)$
+windowrule = size $sizeFloat, ^(mirage)$
+windowrule = center, ^(mirage)$
+windowrule = animation default,^(mirage)$
+
+# xtreme download manager
+windowrule = float, ^(xdman-Main)$
+windowrule = size $sizeFloat, ^(xdman-Main)$
+windowrule = center, ^(xdman-Main)$
+windowrule = animation default,^(xdman-Main)$
+
+# pavucontrol
+windowrule = float, ^(pavucontrol)$
+windowrule = size $sizeFloat, ^(pavucontrol)$
+windowrule = center, ^(pavucontrol)$
+windowrule = animation default,^(pavucontrol)$
+
+# others
 windowrule = float, ^(galculator)$
+windowrule = animation default,^(galculator)$
+
+windowrule = float, ^(Rofi)$
+windowrule = animation default,^(Rofi)$
+
+windowrule = float, ^(arandr)$
+
+windowrule = float, ^(Arandr)$
+
 windowrule = float, ^(Dragon)$
+
+windowrule = float, ^(Lxappearance)$
+
+windowrule = float, ^(vCoolor)$
+
+windowrule = float, ^(zoom)$
+windowrule = animation default,^(zoom)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -230,25 +305,22 @@ windowrule = opacity 0.90 override 0.90 override,^(Rofi)$
 ########################################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = SUPER, F1, exec, groff -mom $HOME/.dotfiles/hyprland/help.mom -Tpdf | zathura -
-bind = SUPER, F4, exec, st -c st-float -g 95x25 pulsemixer
-# bind = SUPER, F4, exec, kitty --class kitty-float pulsemixer
-#
-
+# bind = SUPER, F4, exec, st -c st-float -g 95x25 pulsemixer
+bind = SUPER, F4, exec, kitty --class kitty-float -e pulsemixer
 
 # Applications
 bind = SUPER, RETURN, exec, kitty
-bind = SUPER SHIFT, RETURN, exec, st -c st-float -g 95x25
+bind = SUPER SHIFT, RETURN, exec, kitty --class kitty-float
 bind = SUPER, F, fullscreen,0
 bind = SUPER, Q, killactive,
 bind = SUPER SHIFT, Q, exit,
 bind = CONTROL ALT, L, exec, swaylock -f -c 000000
-bind = SUPER SHIFT, E, exec, nemo
-bind = SUPER, E, exec, st -c st-float -g 95x25 -e lf
-# bind = SUPER, E, exec, dolphin ~/
+bind = SUPER SHIFT, E, exec, kitty --class kitty-float -e lf
+bind = SUPER, E, exec, nemo
+# bind = SUPER SHIFT, E, exec, dolphin
 bind = SUPER, W, exec, firefox
 bind = SUPER SHIFT, W, exec, firefox --private-window
 bind = SUPER SHIFT, SPACE, togglefloating,
@@ -269,11 +341,11 @@ bind = SUPER SHIFT, APOSTROPHE, exec, galculator
 bind = ,Print, exec, grim
 bind = SUPER SHIFT, Y ,exec, grim -g "$(slurp)" - | swappy -f -
 # bind = SUPERSHIFT, V, exec, wf-recorder -g "$(slurp)" # run wf-recorder in terminal
-bind = SUPER, C, exec, st -c st-float -g 95x25 -e calcurse
-bind = SUPER, M, exec, st -c st-float -g 95x25 -e ncmpcpp
-bind = SUPER SHIFT, R, exec, st -c st-float -g 95x25 -e gotop
+bind = SUPER, C, exec, kitty --class kitty-float -e calcurse
+bind = SUPER, M, exec, kitty --class kitty-float -e ncmpcpp
+bind = SUPER SHIFT, R, exec, kitty --class kitty-float -e gotop
 bind = SUPER, Y, exec, hyprpicker -n # color picker to clipboard
-bind = SUPER CONTROL, N, exec, st -c st-float -g 95x25 -e nmtui
+bind = SUPER CONTROL, N, exec, kitty --class kitty-float -e nmtui
 
 # Mpd control
 bind = SUPER, BACKSLASH, exec, mpc -p 6601 toggle
