--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,5 +1,10 @@
 preload = /home/agung/.dotfiles/.local/share/wallpapers/tree-alone.jpg
+preload = /home/agung/.dotfiles/.local/share/wallpapers/rocksea.jpg
+preload = /home/agung/.dotfiles/.local/share/wallpapers/dusty-lake.jpg
+preload = /home/agung/.dotfiles/.local/share/wallpapers/dark-vilage.jpg
+preload = /home/agung/.dotfiles/.local/share/wallpapers/landscape.jpg
 # .. more preloads
 
-wallpaper = eDP-1,/home/agung/.dotfiles/.local/share/wallpapers/tree-alone.jpg
-# .. more monitors
+# wallpaper = eDP-1,/home/agung/.dotfiles/.local/share/wallpapers/tree-alone.jpg
+wallpaper = eDP-1,/home/agung/.dotfiles/.local/share/wallpapers/landscape.jpg
+# .. more monitors (hyprctl monitors)
