update xinput setting note

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,22 +7,13 @@ set -g renumber-windows on
 set -g default-terminal "tmux-256color"
 set -g default-terminal "screen-256color"
 
-set -g status-bg black
-set -g status-fg white
-# set-option -g status-bg colour240
-# set-option -g status-fg default
-# set -g status-bg default
-
-# Status style
-set -g automatic-rename on
-# set -g status-left '#(echo Agstr)'
-# :et -g status-left-length 15
-
 #Reload new tmux config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Configuration reloaded successfully!"
+# bind r source-file ~/.tmux.conf
 
 #Remaping prefix(leader)
-set-option -g prefix C-z
+set-option -g prefix C-a
+set-option -g prefix2 C-b
 
 #Split window
 bind | split-window -hc "#{pane_current_path}"
@@ -51,15 +42,15 @@ bind -r C-l resize-pane -R 6
 bind j choose-window 'join-pane -h -s "%%"'
 bind J choose-window 'join-pane -s "%%"'
 
-# switching windows with c-a-{h,l},{i,o}
-bind -n c-M-h previous-window
-bind -n c-M-l next-window
-bind -n c-M-i previous-window
-bind -n c-M-o next-window
+# Switching windows and session
+bind -n C-M-l next-window
+bind -n C-M-h previous-window
+bind -n C-M-j switch-client -n
+bind -n C-M-k switch-client -p
 
-# switch windows with alt-shift-p,n
-bind -n M-P switch-client -p
-bind -n M-N switch-client -n
+# disable alt+shift+{p,n} because it conflict with nvim
+# unbind-key M-P
+# unbind-key M-N
 
 # Quick pane creation
 # bind-key h split-window -h "vim ~/some/file/notes.md"
@@ -68,26 +59,23 @@ bind -n M-N switch-client -n
 # bind -n C-j choose-window 'your commands'
 # bind -n C-j choose-window 'join-pane -h -s "%%"'
 
+# Status bar
+set -g status-bg black
+setw -g window-status-separator ""
+set-option -g automatic-rename on
+set-option -g status-left-length 100
+set-option -g status-right-length 100
+set-option -g window-status-format '#[fg=#656565] #I)#W '
+set-option -g window-status-current-format '#[bg=#363636,fg=white] #I)#W '
+set-option -g status-left '#[fg=#262626,bg=#70a5eb] #S #[fg=#262626]'
+set-option -g status-right '#[fg=#656565]#(echo " $USER@core")'
+
+set-option -g pane-border-style fg="#0F1923"
+
 # List of Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# List of Plugins (colorscheme-gruvbox)--
-# set -g @plugin 'egel/tmux-gruvbox'
-# set -g @tmux-gruvbox 'dark' # or 'light'
-
-# List of Plugins (colorscheme-onedark)--
-# set -g @plugin 'odedlaz/tmux-onedark-theme'
-
-# List of Plugins (colorscheme-onedark)--
-# set -g @plugin 'wfxr/tmux-power'
-# set -g @tmux_power_theme 'sky' # gold, redwine, moon, forest, violet, snow, coral, sky,
-
-# source /home/agung/.config/tmux/statusline.conf
-# source /home/agung/.config/tmux/statusline-gruvbox.conf
-# source ./utility.conf
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
